added names and remove button for each addr, added footer with github logo

--- a/public/style.css
+++ b/public/style.css
@@ -51,7 +51,7 @@ ul {
 #addr {
   overflow-wrap: anywhere;
 }
-#Placeholder {
+#addresslist {
   display: flex;
   flex-wrap: wrap;
   height: 100%;
